<resources>
    <string name="app_name">My Places</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyD-VPyj7IwXBWFcSKEW0HgTgNJMDK1sMvM</string>

    <!--Drawer menu-->
    <string name="map">Map</string>
    <string name="places">Places</string>
    <string name="settings">Settings</string>

    <!--Settings menu-->
    <string name="logout">Log Out</string>

    <!--Activity names-->
    <string name="street_view">Street view</string>
    <string name="add_marker">Add marker</string>
    <string name="add_place">Add place</string>

    <!--Error Messages-->
    <string name="er_location_tracking_failed">Location tracking failed</string>
    <string name="er_no_street_view_for_location">No street view available for location</string>
    <string name="er_unknown_location">Location is unknown</string>

    <!--Permission Messages-->
    <string name="location_permission_rationale">App needs to track current location. Please grant this permission.</string>
    <string name="location_permission_rationale_title">Location Permission</string>
    <string name="storage_permission_rationale">App needs save pictures to internal memory. Please grant this permission.</string>
    <string name="storage_permission_rationale_title">Write to SD Card permission</string>
    <string name="camera_permission_rationale">App wants to take pictures with your camera. Please grant this permission</string>
    <string name="camera_permission_rationale_title">Take pictures permission</string>

    <string name="hint_enter_title">Enter Title</string>
    <string name="hint_enter_description">Enter Description</string>
    <string name="btn_submit">Submit</string>
    <string name="no_description">No Description</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_picture">Add picture</string>
    <string name="delete_picture_dialog_msg">Do you want to delete this picture?</string>
    <string name="delete_picture_dialog_title">Delete picture</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>

    <string name="search">Search</string>
    <string name="share_create_title">Creating sharing data</string>
    <string name="share_create_msg">Please wait</string>

    <string name="sharing_map">View on map:\n %1$s</string>
    <string name="sharing_street_view_subject">This is the place</string>
    <string name="sharing_pin_msg_description">I\'m sharing a place with you.\n\n</string>
    <string name="sharing_pin_title"><b>Title:</b>\n%1$s\n\n</string>
    <string name="sharing_pin_description"><b>Description:</b>\n%1$s\n\n</string>
    <string name="sharing_address"><b>Address:</b>\n%1$s\n\n</string>
    <string name="delet_pin_msg">Would you like to delete this pin?</string>
    <string name="delete_pin_title">Delete pin</string>
    <string name="street">Street</string>
    <string name="drop">Drop</string>
    <string name="edit_pin">Edit place</string>
    <string name="here">here</string>
    <string name="loading_address_failed">Loading address failed</string>
    <string name="click_to_select_address">Click to select address</string>
    <string name="address">Address</string>
    <string name="select_address">Select address</string>
    <string name="cancel">Cancel</string>
    <string name="navigate">Navigate</string>
    <string name="save">Save</string>
</resources>
